--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "kcors": "^2.2.1",
     "koa": "^2.3.0",
     "koa-static": "^4.0.1",
