--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "kcors": "^2.2.1",
     "koa": "^2.3.0",
     "koa-static": "^4.0.1",
