--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "WebRTC codelab",
   "dependencies": {
+    "koa": "^2.13.1",
     "node-static": "^0.7.10",
     "socket.io": "^3.0.3"
   }
