--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 WEB_PORT = 3030
+NODE_ENV = DEV
+DATABASE_PORT = 31006
+DATABASE_HOST = x1gpnpmio50rzaoo.nia.db.appmd.co.kr
+DATABASE = mdoctor
+DATABASE_USER = groupcare
+DATABASE_PASSWORD = Wrezpp74qmEHN30Y!
