--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "WebRTC codelab",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "koa": "^2.13.1",
+    "mysql2": "^2.2.5",
     "node-static": "^0.7.10",
     "socket.io": "^3.0.3"
   }
